--- a/src/service-backend/package.json
+++ b/src/service-backend/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Service Provider",
   "main": "server.js",
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -14,6 +13,7 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.12.3"
+    "mongoose": "^5.12.3",
+    "node-modules": "^1.0.1"
   }
 }
